# bleak

./: .gitignore  .prettierrc  ARCHITECTURE_SPLIT_SUMMARY.md  DOCUMENTATION_PLAN.md  ISNOTHESAME.md  PROJECT_OVERVIEW.md  README.md  SETUP.md  index.html  package-lock.json  package.json
.cursordefinitions/: silentedge.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
backend/: .env.example  DYNAMIC_QUESTIONS_README.md  README.md  langgraph.json  pyproject.toml
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
backend/src/: graph.py  main.py  main2.py
backend/src/backend/: main.py
backend/src/bleak_interactive/: __init__.py  configuration.py  llm_provider.py  prompts.py  state.py
backend/src/bleak_interactive/graph/: __init__.py  build_graph.py  runner.py
backend/src/bleak_interactive/models/: __init__.py  dynamic_models.py  models.py
backend/src/bleak_interactive/nodes/: __init__.py  additional_questions_node.py  answer_node.py  choice_node.py  clarify_node.py  rating_node.py  structure_questions_node.py  wait_for_human_node.py
backend/src/bleak_interactive/tools/: README.md  __init__.py  question_structuring_tool.py
backend/src/bleak_interactive/utils/: logger.py
backend/src/chatbot/: configuration.py  llm_provider.py
backend/src/chatbot/graphs/: customizestate.py  graph.py  humanintheloop.py  memory_graph.py  time_travel.py  toolsgraph.py
backend/src/routes/: bleak_routes.py  chatbot_routes.py
docs/: DOCUMENTATION_SUMMARY.md
frontend/: package.json  (+3 more)
(+202 files in other folders)
