[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend with LangGraph integration for Bleak"
readme = "README.md"
authors = [
    { name = "bernatsampera", email = "b.sampera@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "langgraph-cli[inmem]>=0.1.89",
    "langchain_ollama"
]

[project.scripts]
start = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backend", "src/bleak_interactive", "src/graph.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.89",
]
